--- a/config-test.yml
+++ b/config-test.yml
@@ -1,2 +1,2 @@
 config:
-  info: master branch, springclouddemo-config/config-test.yml
+  info: "master branch, springclouddemo-config/config-test.yml"
