--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch, springclouddemo-config/config-dev.yml   update1  version = 4"
+  info: "master branch, springclouddemo-config/config-dev.yml   update1  version = hello update1"
